--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: mysql-custom.Dockerfile
     container_name: mysql_db_proyecto_prod
     command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - "3306:3306" 
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
